# SemesterprojektGripper

./: CMakeLists.txt  DBfetch.h  DBinsertingcoordinates1-9.txt  DBinsertingcoordinates10-18.txt  DBinsertingcoordinates19-26.txt  DBinsertingletters.txt  DBsetup.txt  PicknPlace.h  Transformations.mlx  Updated_servo_kode.atsln  gui.h  magasin_lego.dwg  main.cpp  mainModbus.cpp  matrix.h  move_robot.h  new.move_robot.h  new_main.cpp  rotmat.h  serial.h  setup_GUI  transformations.h
Transformationer/: Transformation_TCP_2.mlx  Transformation_TCP_3.mlx  Transformation_TCP_4.mlx  Transformations_TCP_1.mlx
Updated_servo_kode/: Updated_servo_kode.componentinfo.xml  Updated_servo_kode.cproj  main.c
Updated_servo_kode/Debug/: Makefile  Updated_servo_kode.elf  Updated_servo_kode.hex  Updated_servo_kode.lss  Updated_servo_kode.map  Updated_servo_kode.srec  main.d
